<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark"
    tools:context=".activity.Login">

    <android.support.v7.widget.CardView
        android:id="@+id/settings_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        ads:cardCornerRadius="10dp"
        ads:cardElevation="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:background="@drawable/signup_card_bg"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="right|center_vertical"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/server_configuration_reset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/color_primary_green"
                    android:textSize="15sp"
                    android:text="@string/settings_message"/>

            </LinearLayout>

            <!-- url Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/url_icon"
                    android:inputType="text"
                    android:hint="@string/server_address" />
            </android.support.design.widget.TextInputLayout>

            <!-- send request Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_request"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/common_button_shape"
                android:padding="12dp"
                android:textColor="@color/white_transparent"
                android:text="@string/send_request_button"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>