<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark"
    tools:context=".activity.Login">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/forgot_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:visibility="visible"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleMarginTop="15dp">

        <LinearLayout
            android:id="@+id/forgot_password_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgot_password_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="@string/reset_password_toolbar"
                android:layout_marginRight="8dp"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:textColor="@color/white_transparent"
                android:textSize="16sp"
                android:textStyle="normal"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/forgot_password_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        ads:cardCornerRadius="10dp"
        ads:cardElevation="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:background="@drawable/signup_card_bg"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="right|center_vertical"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/password_reset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/color_primary_green"
                    android:textSize="15sp"
                    android:text="@string/reset_password_message"/>

            </LinearLayout>

            <!-- email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_maps_local_post_office"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address" />
            </android.support.design.widget.TextInputLayout>

            <!-- send request Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_reset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/common_button_shape"
                android:padding="12dp"
                android:textColor="@color/white_transparent"
                android:text="@string/send_request_button"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>


