<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark"
    tools:context=".activity.SignUp">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:visibility="visible"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleMarginTop="15dp">

        <LinearLayout
            android:id="@+id/signup_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="SignUp"
                android:layout_marginRight="8dp"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:textColor="@color/white_transparent"
                android:textSize="16sp"
                android:textStyle="normal"/>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/signup_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        ads:cardCornerRadius="10dp"
        ads:cardElevation="4dp"
        android:layout_below="@+id/signup_toolbar"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_centerInParent="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:background="@drawable/signup_card_bg"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signup_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/demophoto" />

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/ic_social_person_outline"
                    android:hint="@string/display_name" />
            </android.support.design.widget.TextInputLayout>

            <!-- email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_maps_local_post_office"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_communication_vpn_key"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Re-enter Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_reEnterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_communication_vpn_key"
                    android:hint="@string/re_type_password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/common_button_shape"
                android:padding="12dp"
                android:textColor="@color/white_transparent"
                android:text="@string/create_account"/>

        </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>


