<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark"
    tools:context=".activity.NoInternet">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/no_internet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleMarginTop="15dp">

        <LinearLayout
            android:id="@+id/no_internet_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_internet_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center|right"
                android:drawableRight="@drawable/ic_action_hardware_keyboard_arrow_right"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/no_internet_toolber"
                android:textColor="@color/white_transparent"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/no_internet_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        ads:cardCornerRadius="10dp"
        ads:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/no_internet_image"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_centerInParent="true"
                android:padding="8dp" />

            <TextView
                android:id="@+id/no_internet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_internet_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/oops"
                android:textColor="@color/contact_profile_ash"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/no_internet_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/internet_connection_not_found"
                android:textColor="@color/md_blue_700"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>